[TamanoPizza] Se eliminaron algunos archivos por defecto del proyecto Razor Pages y se creo la nueva vista CrearPizza

--- a/PizzaPlaneta/Pages/CrearPizza.cshtml
+++ b/PizzaPlaneta/Pages/CrearPizza.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model IndexModel
+@model CrearPizzaModel
 @{
-	ViewData["Title"] = "Pizza Planeta: Invente una pizza!";
+	ViewData["Title"] = "Pizza Planeta: Cree su pizza!";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 
-		<h2>Invente su propia pizza!</h2>
+		<h2>Cree su propia pizza!</h2>
 		<hr>
 		<div class="container">
 			<ul class="nav nav-pills">
