--- a/PizzaPlaneta/Pages/Shared/_Layout.cshtml
+++ b/PizzaPlaneta/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">Pizza Planeta</a>
+                <a asp-page="/CrearPizza" class="navbar-brand">Pizza Planeta</a>
             </div>
         </div>
     </nav>
