--- a/PizzaPlaneta/Pages/CrearPizza.cshtml
+++ b/PizzaPlaneta/Pages/CrearPizza.cshtml
@@ -36,9 +36,9 @@
 									<div class="panel-heading">Seleccione el tamaño de su pizza</div>
 									<!-- List group -->
 									<ul class="list-group">
-										<li class="list-group-item">Cras justo odio</li>
-										<li class="list-group-item">Dapibus ac facilisis in</li>
-										<li class="list-group-item">Morbi leo risus</li>
+										<li class="list-group-item"><input style="margin-right:4px" id="pequena" type="radio" name="tamano" value="pequena" checked><label for="pequena">Pequeña</label></li>
+										<li class="list-group-item"><input style="margin-right:4px" id="mediana" type="radio" name="tamano" value="mediana"><label for="mediana">Mediana</label></li>
+										<li class="list-group-item"><input style="margin-right:4px" id="grande" type="radio" name="tamano" value="grande"><label for="grande">Grande</label></li>
 									</ul>
 								</div>
 
@@ -47,8 +47,8 @@
 									<div class="panel-heading">Seleccione la masa de su pizza</div>
 									<!-- List group -->
 									<ul class="list-group">
-										<li class="list-group-item">Cras justo odio</li>
-										<li class="list-group-item">Dapibus ac facilisis in</li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="masaclasica" type="radio" name="masa" value="masaclasica" checked><label for="clasica">Clasica</label></li>
+										<li class="list-group-item"><input style="margin-right:4px" id="masaartesanal" type="radio" name="masa" value="masaartesanal"><label for="mediana">Artesanal</label></li>
 									</ul>
 								</div>
 							</div>
@@ -63,7 +63,7 @@
 									<div class="panel-heading">Seleccione los ingredientes de su pizza</div>
 									<!-- List group -->
 									<ul class="list-group">
-										<li class="list-group-item">Cras justo odio</li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="queso" type="checkbox" name="ingredientes" value="queso"><label for="queso">Queso</label></li>
 										<li class="list-group-item">Dapibus ac facilisis in</li>
 										<li class="list-group-item">Morbi leo risus</li>
 										<li class="list-group-item">Morbi leo risus</li>
