--- a/PizzaPlaneta/Pages/CrearPizza.cshtml
+++ b/PizzaPlaneta/Pages/CrearPizza.cshtml
@@ -64,8 +64,8 @@
 									<!-- List group -->
 									<ul class="list-group">
 										<li class="list-group-item"><input style="margin-right:4px;" id="queso" type="checkbox" name="ingredientes" value="queso"><label for="queso">Queso</label></li>
-										<li class="list-group-item">Dapibus ac facilisis in</li>
-										<li class="list-group-item">Morbi leo risus</li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="hongos" type="checkbox" name="ingredientes" value="hongos"><label for="queso">Hongos</label></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="tomate" type="checkbox" name="ingredientes" value="tomate"><label for="queso">Tomate</label></li>
 										<li class="list-group-item">Morbi leo risus</li>
 										<li class="list-group-item">Morbi leo risus</li>
 										<li class="list-group-item">Morbi leo risus</li>
