[IngredientesPizza] Correccion de un typo en el metodo constructor de SalchichaIngrediente. Se agregan en el checkboxlist de CrearVista los Ingredientes: Albahaca, Jamon, Carne y Salchicha

--- a/PizzaPlaneta/Pages/CrearPizza.cshtml
+++ b/PizzaPlaneta/Pages/CrearPizza.cshtml
@@ -64,13 +64,12 @@
 									<!-- List group -->
 									<ul class="list-group">
 										<li class="list-group-item"><input style="margin-right:4px;" id="queso" type="checkbox" name="ingredientes" value="queso"><label for="queso">Queso</label></li>
-										<li class="list-group-item"><input style="margin-right:4px;" id="hongos" type="checkbox" name="ingredientes" value="hongos"><label for="queso">Hongos</label></li>
-										<li class="list-group-item"><input style="margin-right:4px;" id="tomate" type="checkbox" name="ingredientes" value="tomate"><label for="queso">Tomate</label></li>
-										<li class="list-group-item">Morbi leo risus</li>
-										<li class="list-group-item">Morbi leo risus</li>
-										<li class="list-group-item">Morbi leo risus</li>
-										<li class="list-group-item">Morbi leo risus</li>
-										<li class="list-group-item">Morbi leo risus</li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="hongos" type="checkbox" name="ingredientes" value="hongos"><label for="hongos">Hongos</label></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="tomate" type="checkbox" name="ingredientes" value="tomate"><label for="tomate">Tomate</label></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="albahaca" type="checkbox" name="ingredientes" value="albahaca"><label for="albahaca">Albahaca</label></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="jamon" type="checkbox" name="ingredientes" value="jamon"><label for="jamon">Jamón</label></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="carne" type="checkbox" name="ingredientes" value="carne"><label for="queso">Carne</label></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="salchicha" type="checkbox" name="ingredientes" value="salchicha"><label for="queso">Salchicha</label></li>
 									</ul>
 								</div>
 							</div>
