--- a/PizzaPlaneta/Pages/CrearPizza.cshtml
+++ b/PizzaPlaneta/Pages/CrearPizza.cshtml
@@ -22,9 +22,9 @@
 		<hr>
 		<div class="container">
 			<ul class="nav nav-pills">
-				<li class="active"><a data-toggle="pill" href="#tamanoymasa"><span class="badge">1</span>Tamaño y Masa</a></li>
-				<li><a data-toggle="pill" href="#ingredientes"><span class="badge">2</span>Ingredientes</a></li>
-				<li><a data-toggle="pill" href="#direccion"><span class="badge">3</span>Dirección de entrega</a></li>
+				<li class="active"><a data-toggle="pill" href="#tamanoymasa"><span style="margin-right:3px;" class="badge pull-left">1</span>Tamaño y Masa</a></li>
+				<li><a data-toggle="pill" href="#ingredientes"><span style="margin-right:3px;" class="badge pull-left">2</span>Ingredientes</a></li>
+				<li><a data-toggle="pill" href="#direccion"><span style="margin-right:3px;" class="badge pull-left">3</span>Dirección de entrega</a></li>
 			</ul>
 			<form method="post">
 				<div class="tab-content">
