[Interfaz] Se agregan imagens para los ingredientes de la checkboxlist en la vista CrearPizza

--- a/PizzaPlaneta/Pages/CrearPizza.cshtml
+++ b/PizzaPlaneta/Pages/CrearPizza.cshtml
@@ -63,13 +63,13 @@
 									<div class="panel-heading">Seleccione los ingredientes de su pizza</div>
 									<!-- List group -->
 									<ul class="list-group">
-										<li class="list-group-item"><input style="margin-right:4px;" id="queso" type="checkbox" name="ingredientes" value="queso"><label for="queso">Queso</label></li>
-										<li class="list-group-item"><input style="margin-right:4px;" id="hongos" type="checkbox" name="ingredientes" value="hongos"><label for="hongos">Hongos</label></li>
-										<li class="list-group-item"><input style="margin-right:4px;" id="tomate" type="checkbox" name="ingredientes" value="tomate"><label for="tomate">Tomate</label></li>
-										<li class="list-group-item"><input style="margin-right:4px;" id="albahaca" type="checkbox" name="ingredientes" value="albahaca"><label for="albahaca">Albahaca</label></li>
-										<li class="list-group-item"><input style="margin-right:4px;" id="jamon" type="checkbox" name="ingredientes" value="jamon"><label for="jamon">Jamón</label></li>
-										<li class="list-group-item"><input style="margin-right:4px;" id="carne" type="checkbox" name="ingredientes" value="carne"><label for="queso">Carne</label></li>
-										<li class="list-group-item"><input style="margin-right:4px;" id="salchicha" type="checkbox" name="ingredientes" value="salchicha"><label for="queso">Salchicha</label></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="queso" type="checkbox" name="ingredientes" value="queso"><label for="queso">Queso</label><img src="https://i.dlpng.com/static/png/141585_preview.png" style="margin-left:40px;width:50px;height:50px"class="img-rounded"></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="hongos" type="checkbox" name="ingredientes" value="hongos"><label for="hongos">Hongos</label><img src="https://www.fondation-louisbonduelle.org/wp-content/uploads/2016/08/champignon-paris.png" style="margin-left:40px;width:50px;height:50px" class="img-rounded"></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="tomate" type="checkbox" name="ingredientes" value="tomate"><label for="tomate">Tomate</label><img src="https://pluspng.com/img-png/png-tomato-tomato-png-3531.png" style="margin-left:40px;width:50px;height:5	0px" class="img-rounded"></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="albahaca" type="checkbox" name="ingredientes" value="albahaca"><label for="albahaca">Albahaca</label><img src="https://images.vexels.com/media/users/3/149059/isolated/preview/570fb153da3b8532e24364206fcc80b9-ilustraci--n-de-hierba-de-albahaca-by-vexels.png" style="margin-left:27px;width:50px;height:50px" class="img-rounded"></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="jamon" type="checkbox" name="ingredientes" value="jamon"><label for="jamon">Jamón</label><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSPkZmO4cIfZQ3BcRW0DU3v7H8LHbVsW9VHqA&usqp=CAUg" style="margin-left:41px;width:50px;height:50px" class="img-rounded"></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="carne" type="checkbox" name="ingredientes" value="carne"><label for="queso">Carne</label><img src="https://pluspng.com/img-png/png-steak-hp1-steak-png-900.png" style="margin-left:48px;width:50px;height:50px" class="img-rounded"></li>
+										<li class="list-group-item"><input style="margin-right:4px;" id="salchicha" type="checkbox" name="ingredientes" value="salchicha"><label for="queso">Salchicha</label><img src="https://i.ya-webdesign.com/images/breakfast-transparent-sausage-1.png" style="margin-left:22px;width:50px;height:50px" class="img-rounded"></li>
 									</ul>
 								</div>
 							</div>
