--- a/PizzaPlaneta/Pages/CrearPizza.cshtml
+++ b/PizzaPlaneta/Pages/CrearPizza.cshtml
@@ -83,14 +83,20 @@
 									<!-- Default panel contents -->
 									<div class="panel-heading">Ingrese una dirección de entrega</div>
 									<div class="panel-body">
-										Panel content
+										<div class="form-horizonta">
+											<div class="form-group">
+												<div class="col-md-8">
+													<textarea style="resize:vertical" class="form-control" asp-for="direccion" rows="4" required></textarea>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 							<div class="panel-footer text-right"><button type="button" class="float-right btn btn-primary direccionatras" style="margin-right:5px"><i class="glyphicon glyphicon-chevron-left"></i>Atras</button><button class="float-right btn btn-success">Ver orden<i class="glyphicon glyphicon-shopping-cart"></i></button></div>
 						</div>
+							</div>
 					</div>
-				</div>
 			</form>
 		</div>
 	</main>
