[VerOrden] [MontoTotal] Se agrega una estrategia RegularEstrategiaParaCalcular precio que solo toma en cuenta el costo de la pizza en sus ingredientes

--- a/PizzaPlaneta/Pages/CrearPizza.cshtml
+++ b/PizzaPlaneta/Pages/CrearPizza.cshtml
@@ -26,7 +26,7 @@
 				<li><a data-toggle="pill" href="#ingredientes"><span style="margin-right:3px;" class="badge pull-left">2</span>Ingredientes</a></li>
 				<li><a data-toggle="pill" href="#direccion"><span style="margin-right:3px;" class="badge pull-left">3</span>Dirección de entrega</a></li>
 			</ul>
-			<form method="post">
+			<form method="post" asp-page="VerOrden">
 				<div class="tab-content">
 					<div id="tamanoymasa" class="tab-pane fade in active">
 						<div class="panel panel-default">
